# Spoky

./: .gitignore  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: .continue-here.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md
.planning/phases/02-discord/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  models.rs
src-tauri/src/commands/: accounts.rs  conversations.rs  messages.rs  mod.rs  protocol.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs  schema_v1.sql
src-tauri/src/models/: account.rs  conversation.rs  message.rs  mod.rs
src-tauri/src/protocol/: adapter.rs  events.rs  mod.rs  registry.rs
src-tauri/src/protocol/discord/: adapter.rs  auth.rs  mod.rs  sync.rs
src/lib/components/: AccountManager.svelte  ConversationList.svelte  ConversationView.svelte  MessageInput.svelte
src/lib/stores/: accounts.ts  conversations.ts  messages.ts
src/routes/: +page.svelte
